--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,17 @@ HOST=127.0.0.1
 PORT=3333
 NODE_ENV=development
 APP_URL=http://${HOST}:${PORT}
+
 CACHE_VIEWS=false
-APP_KEY=OVga2HyxFcS1vnSwU2PPaPWIpyrfoy4U
-DB_CONNECTION=postgres
+
+APP_KEY=
+
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
-DB_PORT=5432
+DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=
-DB_DATABASE=adonos-base
+DB_DATABASE=adonis
+
 SESSION_DRIVER=cookie
 HASH_DRIVER=bcrypt
