--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@adonisjs/shield": "^1.0.8",
     "mysql": "^2.17.1",
     "pg": "^7.11.0",
-    "stripe": "^7.4.0"
+    "stripe": "^7.4.0",
+    "url-parse": "^1.4.7"
   },
   "devDependencies": {},
   "autoload": {
