--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-HOST=127.0.0.1
-PORT=3333
+HOST=0.0.0.0
+PORT=4000
 NODE_ENV=development
 APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
@@ -7,8 +7,8 @@ APP_KEY=fWjngVoofqKcGMEzFAEddup77Ywdtm9r
 DB_CONNECTION=postgres
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_USER=root
-DB_PASSWORD=
-DB_DATABASE=adonos-base
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_DATABASE=adonis
 SESSION_DRIVER=cookie
 HASH_DRIVER=bcrypt
